azure-zeebe-ingress/zeebe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: camunda
  name: zeebe-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: CHANGEME.eastus2.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda8-zeebe-gateway
                port:
                  number: 26500
  tls:
    - secretName: tls-secret
      hosts:
        - CHANGEME.eastus2.cloudapp.azure.com
